# botique

./: .gitignore  AGENTS.md  README.md  botique-initial-concept-draft.md  drizzle.config.ts  package.json  pyproject.toml  tsconfig.json
docs/: README.md  agent-loop.md  agent-tools.md  architecture.md  mvp-scope.md  simulation-model.md  status.md  tournament-mode.md
docs/internal/: agent-loop.md  agent-tools.md  mvp-scope.md  simulation-model.md  tournament-mode.md
docs/prompts/: agent-tools-thread.md  frontend-operator-threads.md
frontend/: index.html  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  docs.d.ts  index.css
frontend/src/api/: client.ts  mockRunData.ts
frontend/src/components/: BackendNotice.tsx  Badge.tsx  BalanceTimeline.tsx  EmptyState.tsx  Gauge.tsx  Layout.tsx  ListingCard.tsx  LoadingDots.tsx  ScenarioBadge.tsx  (+13 more)
server/src/: app.ts  config.ts  default-marketplace-state.ts  errors.ts  index.ts  listing-availability.ts
server/test/: app.test.ts  bootstrap.test.ts  control-routes.test.ts  python-contract.test.ts  scenario-seeding.test.ts  simulation.test.ts
src/agent_runtime/: __init__.py  artifacts.py  briefing.py  cli.py  events.py  loop.py  memory.py  runner.py  serialization.py  tournament.py
src/control_api/: __init__.py  client.py
src/seller_core/: __init__.py  cli.py  client.py  models.py  tool_schemas.py  transport.py
tests/: test_agent_runtime.py  test_core.py
video/: package.json  tsconfig.json
video/src/: AudioLayer.tsx  BotiqueAgent.tsx  BotiqueDemo.tsx  Root.tsx  fonts.ts  lib.tsx  theme.ts
(+94 files in other folders)
