[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "botique-agent-tools"
version = "0.1.0"
description = "Portable seller-facing core CLI for Botique agent tools"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
mistral = ["mistralai"]

[project.scripts]
botique-agent-tools-core = "seller_core.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
